# chery_tiggo_8PMN_Renesas

./: .gitattributes  .gitignore  RULES.md  ПРАВИЛА.md
Development/: README.md
Development/Chery_Emulator/: README.md  cleanup_old_binaries.sh  emulator_config.yaml  main.py  requirements.txt
Development/emulator/: CHECK_READY.py  README.md  inspect_boot_image.py  inspect_dtb_uart.py  main.py  realtime_log_monitor.py  requirements.txt  scan_kernel_fdt.py  ИСТОРИЯ_РАЗРАБОТКИ.md
Development/native_navigator/: CMakeLists.txt  README.md  ИСТОРИЯ_РАЗРАБОТКИ.md
Development/native_navigator/java/com/tiggo/navigator/: TiggoJavaToJni.java  TiggoJniToJava.java  TiggoSecondaryRenderThread.java  YandexMapKitBridge.java
Development/native_navigator/native/core/: navigation_state.h  navigator_engine.h  tiggo_engine.c  tiggo_engine.h
Development/native_navigator/native/jni/: jni_navigator.cpp  jni_tiggo_bridge.c  jni_utils.h
Development/native_navigator/native/render/: render_gl.c  render_gl.h
Development/tiggo_launcher/: README.md
Development/ЯндексДог/: .gitignore  CMakeLists.txt  README.md  build.gradle  gradle.properties  settings.gradle  ИСТОРИЯ_РАЗРАБОТКИ.md
Development/ЯндексДог/app/: build.gradle
Development/ЯндексДог/app/src/main/: AndroidManifest.xml
Development/ЯндексДог/app/src/main/java/com/tiggo/navigator/: ApiKeyManager.java  LocationService.java  MainActivity.java  NavigationService.java  NavigationUI.java  PresentationActivity.java  TiggoApplication.java  TiggoJavaToJni.java  TiggoJniToJava.java  TiggoRenderThread.java  TiggoSecondaryRenderThread.java  TileLoader.java  YandexMapKitBridge.java
Development/ЯндексДог/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
Development/ЯндексДог/java/com/tiggo/navigator/: TiggoJavaToJni.java  TileLoader.java  YandexMapKitBridge.java
Development/ЯндексДог/native/core/: tiggo_engine.c  tiggo_engine.h
Development/ЯндексДог/native/data/: tile_loader.c  tile_loader.h
Development/ЯндексДог/native/jni/: jni_navigation_ui.c  jni_navigation_ui.h  jni_tiggo_bridge.c  jni_tile_loader.c  jni_tile_loader.h
Development/ЯндексДог/native/render/: font_renderer.c  font_renderer.h  map_renderer.c  map_renderer.h  render_gl.c  render_gl.h  route_renderer.c  route_renderer.h  shader_utils.c  shader_utils.h  ui_renderer.c  ui_renderer.h
Documentation/: 00_ОГЛАВЛЕНИЕ_ПРОЕКТА.md  СТРУКТУРА.md
Documentation/01_КОНТЕКСТ_ПРОЕКТА/: ВОССТАНОВЛЕНИЕ_КОНТЕКСТА_AI.md  КОНТЕКСТ_ПРОЕКТА.md
Documentation/02_АНАЛИЗЫ/: 00_ОГЛАВЛЕНИЕ_АНАЛИЗОВ.md  BOOT_SANDWICH_GUIDE.md  README.md
Documentation/03_ПЛАНЫ/: 01_ПЛАН_ИНТЕГРАЦИИ_НАВИГАЦИИ.md  02_ПЛАН_ИССЛЕДОВАНИЯ_TURBODOG.md  15_ИНСТРУКЦИЯ_ДЛЯ_ТЕСТИРОВАНИЯ_НА_ЭМУЛЯТОРЕ.md  18_ПЛАН_МОДИФИКАЦИИ_APK_ШАГ_ЗА_ШАГОМ.md  20_DEV_ВЕРСИЯ_НАВИГАТОРА.md  20_ИНСТРУКЦИЯ_ДЛЯ_ПРОДОЛЖЕНИЯ_НА_ВМ.md  21_ИНСТРУКЦИЯ_ТЕСТИРОВАНИЯ_DEV_ВЕРСИИ.md  24_БЫСТРЫЙ_ТЕСТ_NOTIFICATION_LISTENER.md  25_ИНСТРУКЦИЯ_ПО_СБОРКЕ.md  26_ЧЕКЛИСТ_ТЕСТИРОВАНИЯ.md  28_ПЛАН_МОДИФИКАЦИИ_YANDEX_MAPS.md  29_ИНСТРУКЦИЯ_ПО_ТЕСТИРОВАНИЮ_МОДИФИЦИРОВАННОГО_APK.md  30_ОПТИМИЗАЦИЯ_ПРОИЗВОДИТЕЛЬНОСТИ.md  31_ИТОГОВОЕ_РЕЗЮМЕ_ИЗМЕНЕНИЙ.md  32_ГОТОВНОСТЬ_К_СБОРКЕ.md  33_АРХИТЕКТУРА_API_ДАННЫХ.md  34_ОБНОВЛЕНИЕ_APK_С_API.md
Documentation/04_ИНСТРУКЦИИ/: ИНСТРУКЦИЯ_ПЕРЕНОСА_НА_МАК.md  НАСТРОЙКА_AVD_ANDROID_STUDIO.md
Documentation/05_СТАТУСЫ/: КРАТКАЯ_ХРОНОЛОГИЯ.md  СТАТУС_ОБНОВЛЕНИЯ.md  СТАТУС_ПЕРЕМЕЩЕНИЯ.md  СТАТУС_РАЗРАБОТКИ.md
Documentation/06_ТЕХНИЧЕСКОЕ_ЗАДАНИЕ/: TURBODOG_TECHNOLOGY.md
Documentation/08_АРХИВ/: АНАЛИЗ_JCARTOOLS.md  АНАЛИЗ_NS_APK.md  АНАЛИЗ_ПОДХОДОВ_РЕАЛИЗАЦИИ.md  АНАЛИЗ_РЕШЕНИЯ_JAECOO.md  АНАЛИЗ_СИСТЕМЫ_МУЛЬТИМЕДИА.md  АРХИТЕКТУРА_BRIDGE_SERVICE.md  ВЫВОДЫ_ПО_ПОИСКУ_НАВИГАЦИИ.md  КРАТКИЙ_ВЫВОД_ПРОДЕЛАННОЙ_РАБОТЫ.md  ПЕРВЫЕ_ШАГИ_РЕАЛИЗАЦИИ.md  (+3 more)
Knowledge_base/: 00_README.md
(+506 files in other folders)
